--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: #010101;
 }
 
 code {
@@ -14,7 +15,7 @@ code {
     monospace;
 }
 
-/* h1,
+h1,
 h2,
 h3,
 h4,
@@ -22,7 +23,7 @@ h5,
 h6,
 p {
   margin: 0;
-} */
+}
 ul,
 ol {
   margin: 0;
